# datamart-scripts

./: .gitignore  LICENSE  README.md  pyproject.toml  specialty.txt
db_utils/: config.py  dbconnect.py  r365_importers.py  r365_utils.py  recreate_views.py  toast_utils.py  utils.py
db_utils/views/: current_base_cost_beer_view.sql  current_base_cost_liquor_view.sql  current_base_cost_wine_view.sql  stockcount_category_totals_view.sql  stockcount_conversion_view.sql  stockcount_monthly_view.sql  stockcount_purchases_view.sql  stockcount_sales.view.sql  stockcount_sales_toast_view.sql  stockcount_sales_view.sql  stockcount_waste_view.sql
importers/: locations.py
src/: budget-update.py  bulk-table-update.py  calendar-update.py  calendar_update.py  config.py  dbconnect.py  holiday_table_update.py  item-conversion-update.py  item-price-check.py  menu-engineering-online.py  menu-engineering.py  menu-item-mapping.py  menu-item-table-update.py  menu_engineering_online.py  odata-table-update.py  odata_table_update.py  purchase-item-update.py  r365-api-request.py  receiving-by-purchased-item.py  recipe-ingredient-update.py  recipe-ingredients-flat.py  recipe-table-update.py  run_all_updates.py  sales-account-update.py  sales-check.py  stockcount_category_totals.py  stockcount_daily.py  toast_payments.py  toast_product_mix.py  toast_utils.py  unlinked-recipes.py  uofm-update.py  uofm_update.py  utils.py  weekly-item-base-cost.py  wine-list-change-form.py  wine-list-change-form2.py
