[build-system]
requires = [
    "setuptools >= 77.0.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "datamart-scripts"
version = "2025.0.0"
dependencies = [
    "pandas",
    "psycopg2",
    "icecream",
    "sqlalchemy",
    "json",
    "jinja2",
    "requests",
    "openpyxl"
]

[tool.setuptools]
packages = { find = { where = ["src"]}}
